--- a/css/index.css
+++ b/css/index.css
@@ -533,7 +533,7 @@ ul, li {
 }
 
 #main {
-  background-color: #48C0FF;
+  background: #48C0FF url(../images/banner.png) no-repeat top center;
   overflow: hidden;
 }
 
@@ -576,8 +576,7 @@ ul, li {
 #banner {
   position: relative;
   width: 100%;
-  height: 532px;
-  background: url(../images/banner.png) no-repeat center center;
+  height: 412px;
 }
 #banner #title_panel {
   display: flex;
@@ -585,7 +584,8 @@ ul, li {
   flex-direction: column;
   align-items: center;
   width: 100%;
-  z-index: 99;
+  z-index: 99999;
+  position: absolute;
 }
 #banner #title_panel .title {
   padding-top: 98px;
@@ -608,13 +608,30 @@ ul, li {
 }
 #banner .banner_panel {
   position: absolute;
-  bottom: 0;
+  top: 0;
   left: 0;
   display: block;
   min-width: 900px;
   width: 100%;
-  padding: 0 118px;
-  box-sizing: border-box;
+  height: 412px;
+}
+
+#func_panel {
+  width: 1690px;
+  margin: 0 auto;
+  height: 0;
+  position: relative;
+  z-index: 99999;
+}
+#func_panel .func_panel_left {
+  position: absolute;
+  bottom: -30px;
+  left: 0;
+}
+#func_panel .func_panel_right {
+  position: absolute;
+  right: 0;
+  bottom: -30px;
 }
 
 #tab {
@@ -622,6 +639,7 @@ ul, li {
   background-color: #FFEDDC;
   display: inline-block;
   border-radius: 5px;
+  margin-bottom: 10px;
 }
 #tab > li {
   width: 97px;
@@ -810,8 +828,74 @@ ul, li {
 
 #danmu {
   width: 100%;
-  height: 300px;
+  height: 370px;
   overflow: hidden;
+}
+
+.keyword_search {
+  width: 405px;
+  height: 41px;
+  background: #DCF8FF;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  box-sizing: border-box;
+  margin-right: 12px;
+}
+.keyword_search > input {
+  flex-grow: 1;
+  height: 40px;
+  background: transparent;
+  border: 0;
+  padding: 0 1em;
+  outline: none;
+}
+.keyword_search > button {
+  width: 80px;
+  height: 30px;
+  background: linear-gradient(96.68deg, #3D9EFF 0%, #0A64BC 98.25%);
+  border-radius: 5px;
+  border: 0;
+  color: #FFF;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.status_switch {
+  height: 41px;
+}
+.status_switch li {
+  display: inline-block;
+  width: 124px;
+  height: 41px;
+  background: #DCF8FF;
+  border-radius: 5px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 41px;
+  color: #5B98D3;
+  position: relative;
+  overflow: hidden;
+  margin-right: 6px;
+}
+.status_switch li.active {
+  color: #FF5C00;
+}
+.status_switch li.active:before {
+  background: url(../images/pic_active.png);
+}
+.status_switch li:before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  width: 32px;
+  height: 24px;
+  left: 0;
+  top: 0;
+  background: url(../images/pic_noactive.png);
 }
 
 .el-dialog__wrapper > div[role=dialog] {
@@ -873,6 +957,18 @@ ul, li {
   line-height: 46px;
   text-align: center;
   cursor: pointer;
+}
+
+#job-hall .out_panel_top1 > .title_panel {
+  position: absolute;
+  width: 100%;
+  height: 0;
+}
+#job-hall .out_panel_top1 > .title_panel > .title {
+  width: 291px;
+  height: 63px;
+  margin: 0 auto;
+  background: url(../images/pic_title_jobseeker.png) no-repeat center center;
 }
 
 .out_panel_top1,
@@ -1205,7 +1301,6 @@ ul, li {
   background: url(../images/bg_countdown.png) no-repeat center center;
   background-size: cover;
   position: relative;
-  margin-top: 10px;
 }
 #countdown_panel > .title {
   font-style: normal;
