--- a/css/index.scss
+++ b/css/index.scss
@@ -1,7 +1,7 @@
 @import 'base';
 
 #main {
-  background-color: #48C0FF;
+  background: #48C0FF url(../images/banner.png) no-repeat top center;
   overflow: hidden;
 }
 
@@ -51,8 +51,7 @@
 #banner {
   position: relative;
   width: 100%;
-  height: 532px;
-  background: url(../images/banner.png) no-repeat center center;
+  height: 412px;
 
   #title_panel {
 	display: flex;
@@ -60,7 +59,8 @@
 	flex-direction: column;
 	align-items: center;
 	width: 100%;
-	z-index: 99;
+	z-index: 99999;
+	position: absolute;
 
 	.title {
 	  padding-top: 98px;
@@ -86,14 +86,32 @@
 
   .banner_panel {
 	position: absolute;
-	bottom: 0;
+	top: 0;
 	left: 0;
 	display: block;
 	min-width: 900px;
 	width: 100%;
+	height: 412px;
+  }
+}
 
-	padding: 0 118px;
-	box-sizing: border-box;
+#func_panel {
+  width: 1690px;
+  margin: 0 auto;
+  height: 0;
+  position: relative;
+  z-index: 99999;
+
+  .func_panel_left {
+	position: absolute;
+	bottom: -30px;
+	left: 0;
+  }
+
+  .func_panel_right {
+	position: absolute;
+	right: 0;
+	bottom: -30px;
   }
 }
 
@@ -102,6 +120,7 @@
   background-color: #FFEDDC;
   display: inline-block;
   border-radius: 5px;
+  margin-bottom: 10px;
 
   > li {
 	width: 97px;
@@ -330,10 +349,86 @@
 //弹幕区
 #danmu {
   width: 100%;
-  height: 300px;
+  height: 370px;
   overflow: hidden;
 }
 
+//关键字搜索
+.keyword_search {
+  width: 405px;
+  height: 41px;
+  background: #DCF8FF;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  box-sizing: border-box;
+  margin-right: 12px;
+
+  > input {
+	flex-grow: 1;
+	height: 40px;
+	background: transparent;
+	border: 0;
+	padding: 0 1em;
+	outline: none;
+  }
+
+  > button {
+	width: 80px;
+	height: 30px;
+	background: linear-gradient(96.68deg, #3D9EFF 0%, #0A64BC 98.25%);
+	border-radius: 5px;
+	border: 0;
+	color: #FFF;
+	font-size: 14px;
+	font-weight: bold;
+  }
+}
+
+//切换全部和在线
+.status_switch {
+  height: 41px;
+
+  li {
+	display: inline-block;
+	width: 124px;
+	height: 41px;
+	background: #DCF8FF;
+	border-radius: 5px;
+
+	font-size: 14px;
+	font-weight: bold;
+	text-align: center;
+	line-height: 41px;
+	color: #5B98D3;
+
+	position: relative;
+	overflow: hidden;
+
+	margin-right: 6px;
+
+	&.active {
+	  color: #FF5C00;
+
+	  &:before {
+		background: url(../images/pic_active.png)
+	  }
+	}
+
+	&:before {
+	  content: "";
+	  display: inline-block;
+	  position: absolute;
+	  width: 32px;
+	  height: 24px;
+	  left: 0;
+	  top: 0;
+	  background: url(../images/pic_noactive.png)
+	}
+  }
+}
 
 //Dialog修订
 .el-dialog__wrapper {
@@ -409,6 +504,24 @@
 	cursor: pointer;
   }
 }
+
+#job-hall {
+  .out_panel_top1 {
+	> .title_panel {
+	  position: absolute;
+	  width: 100%;
+	  height: 0;
+
+	  > .title {
+		width: 291px;
+		height: 63px;
+		margin: 0 auto;
+		background: url(../images/pic_title_jobseeker.png) no-repeat center center;
+	  }
+	}
+  }
+}
+
 
 .out_panel_top1,
 .out_panel_bottom2 {
@@ -807,7 +920,6 @@
   background: url(../images/bg_countdown.png) no-repeat center center;
   background-size: cover;
   position: relative;
-  margin-top: 10px;
 
   > .title {
 	font-style: normal;
