--- a/css/index.css
+++ b/css/index.css
@@ -697,6 +697,12 @@ ul, li {
   margin-bottom: 20px;
   position: relative;
 }
+.company-item:hover .hr,
+.company-item:hover .table,
+.company-item:hover .job-seeker,
+.company-item:hover .chair {
+  opacity: 0.1;
+}
 .company-item .company_name {
   position: absolute;
   height: 46px;
@@ -737,7 +743,9 @@ ul, li {
 .company-item .recruit-list .recruit-list_panel {
   width: 220px;
   height: 253px;
-  overflow: hidden;
+  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: scroll;
   margin: 0 auto;
   padding: 10px 0;
   box-sizing: border-box;
@@ -772,6 +780,7 @@ ul, li {
   height: 116px;
   background-repeat: no-repeat;
   background-position: center center;
+  transition: all 0.3s ease-out;
 }
 .company-item .table {
   position: absolute;
@@ -780,6 +789,7 @@ ul, li {
   width: 100%;
   height: 102px;
   background: url(../images/pic_table.png) no-repeat center center;
+  transition: all 0.3s ease-out;
 }
 .company-item .job-seeker {
   position: absolute;
@@ -789,6 +799,7 @@ ul, li {
   height: 182px;
   background-repeat: no-repeat;
   background-position: center center;
+  transition: all 0.3s ease-out;
 }
 .company-item .chair {
   position: absolute;
@@ -797,6 +808,7 @@ ul, li {
   width: 100%;
   height: 123px;
   background: url(../images/pic_chair.png) no-repeat center center;
+  transition: all 0.3s ease-out;
 }
 .company-item .to-chat {
   position: absolute;
@@ -827,6 +839,11 @@ ul, li {
 .company-item.offline .recruit-list .recruit-list_panel .recruit-item {
   border-bottom: 1px dashed #9E9E9E;
   color: #333;
+}
+.company-item.offline .recruit-list .recruit-list_panel .recruit-item .job-title {
+  flex-grow: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .company-item.offline .recruit-list .recruit-list_panel .recruit-item .salary {
   color: #666;
