--- a/css/index.scss
+++ b/css/index.scss
@@ -192,6 +192,16 @@
   margin-bottom: 20px;
   position: relative;
 
+  &:hover {
+	.hr,
+	.table,
+	.job-seeker,
+	.chair {
+	  opacity: 0.1;
+	}
+  }
+
+
   .company_name {
 	position: absolute;
 	height: 46px;
@@ -235,7 +245,9 @@
 	.recruit-list_panel {
 	  width: 220px;
 	  height: 253px;
-	  overflow: hidden;
+	  overflow: auto;
+	  overflow-x: hidden;
+	  overflow-y: scroll;
 	  margin: 0 auto;
 	  padding: 10px 0;
 	  box-sizing: border-box;
@@ -278,6 +290,7 @@
 	height: 116px;
 	background-repeat: no-repeat;
 	background-position: center center;
+	transition: all 0.3s ease-out;
   }
 
   .table {
@@ -287,6 +300,7 @@
 	width: 100%;
 	height: 102px;
 	background: url(../images/pic_table.png) no-repeat center center;
+	transition: all 0.3s ease-out;
   }
 
   .job-seeker {
@@ -297,6 +311,7 @@
 	height: 182px;
 	background-repeat: no-repeat;
 	background-position: center center;
+	transition: all 0.3s ease-out;
   }
 
   .chair {
@@ -306,6 +321,7 @@
 	width: 100%;
 	height: 123px;
 	background: url(../images/pic_chair.png) no-repeat center center;
+	transition: all 0.3s ease-out;
   }
 
   .to-chat {
@@ -344,6 +360,12 @@
 		.recruit-item {
 		  border-bottom: 1px dashed #9E9E9E;
 		  color: #333;
+
+		  .job-title {
+			flex-grow: 1;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		  }
 
 		  .salary {
 			color: #666;
@@ -930,7 +952,7 @@
 	position: relative;
 
 	.unfold {
-	  display:none;
+	  display: none;
 	  position: absolute;
 	  right: 0;
 	  bottom: 0;
@@ -938,17 +960,20 @@
 	  color: #2C75F1;
 	  background: rgba(255, 255, 255, 0.85);
 	}
+
 	.fold {
-	  display:inline-block;
+	  display: inline-block;
 	  cursor: pointer;
 	  color: #2C75F1;
 	}
-	&.cj-ellipsis-multiline{
+
+	&.cj-ellipsis-multiline {
 	  .unfold {
-		display:inline-block;
+		display: inline-block;
 	  }
+
 	  .fold {
-		display:none;
+		display: none;
 	  }
 	}
   }
