--- a/css/index.css
+++ b/css/index.css
@@ -490,9 +490,11 @@ ul, li {
       text-shadow: 0 2px 2px rgba(0, 0, 0, 0.25); }
     #banner #title_panel .memo {
       color: #FFF;
-      font-size: 16px;
+      font-size: 14px;
       font-weight: bold;
-      text-shadow: 1px 1px #878787; }
+      line-height: 25px;
+      text-align: center;
+      text-shadow: 0 2px 2px rgba(0, 0, 0, 0.25); }
   #banner .banner_panel-antiAdGuard {
     display: block;
     height: 412px;
