--- a/css/index.css
+++ b/css/index.css
@@ -1429,6 +1429,7 @@ ul, li {
               border-radius: 50%;
               color: #FFF;
               display: inline-block;
+              flex-shrink: 0;
               height: 24px;
               line-height: 24px;
               text-align: center;
@@ -1556,6 +1557,7 @@ ul, li {
     background-size: cover;
     border: 4px solid #3333331F;
     border-radius: 50%;
+    flex-shrink: 0;
     height: 70px;
     margin-right: 17px;
     overflow: hidden;
