--- a/css/index.scss
+++ b/css/index.scss
@@ -1371,6 +1371,7 @@
 			  border-radius:    50%;
 			  color:            #FFF;
 			  display:          inline-block;
+			  flex-shrink:      0;
 			  height:           24px;
 			  line-height:      24px;
 			  text-align:       center;
@@ -1576,6 +1577,7 @@
 	background-size:     cover;
 	border:              4px solid #3333331F;
 	border-radius:       50%;
+	flex-shrink:         0;
 	height:              70px;
 	margin-right:        17px;
 	overflow:            hidden;
